fix(qrcode): last row fix alignment

--- a/src/app/qrcode/qrcode.component.css
+++ b/src/app/qrcode/qrcode.component.css
@@ -5,8 +5,32 @@
   overflow-x: auto;
 }
 .qr-data-grid {
-  min-width: 1300px;
+  min-width: 1920px;
 }
+.qr-data-grid {
+  .k-grid-aria-root {
+    .k-grid-container {
+      .k-grid-content {
+        .k-grid-table-wrap {
+          .k-grid-table {
+            .k-table-tbody {
+              .k-table-row {
+                .k-table-td {
+                  padding-inline: 35px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+td {
+  padding-inline: 20px;
+}
+
 .contact-details.contact-field {
   font-weight: bold;
   span {
